--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -32,7 +32,7 @@
   crossorigin="anonymous"/>
     <title>React App</title>
   </head>
-  <body style="background-color: #fff8cd;">
+  <body style="background-color: #f1cece;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
